--- a/pages/settings.html
+++ b/pages/settings.html
@@ -14,11 +14,21 @@
             <input type="range" id="mySlider" min="1" max="10" value="3" />
             <span id="sliderValue">3</span>
         </div>
+        <h2>Crazy mode (Random cards)</h2>
+
+        <div class="switch-container">
+          <label class="switch">
+              <input type="checkbox" id="gameModeToggle">
+              <span class="slider"></span>
+          </label>
+          <span id="gameModeLabel">Normal Mode</span>
+      </div>
 
         <div>
             <br>
             <a href="../index.html" class="cool-button">Main Menu</a>
         </div>
         <script type="module" src="../scripts/settings.js"></script>
+        
     </body>
 </html>
