Expended rules added avl Decks graphic

--- a/pages/howToPlay.html
+++ b/pages/howToPlay.html
@@ -33,7 +33,14 @@
             <p>the propabilites, trying to predict the opponent next card</p>
             <p>by trying to understand what set deck he got and his play style.</p>
             <br/>
+
+            <h1>The Decks</h1>
+            <img src="/assets/decks.png" height="50%" width="50%">
+            <br/>
+
         </div>
+        <br/>
+
         <a href="../index.html" class="cool-button">Main Menu</a>
         </div>
         <br/>
