switching side animations

--- a/pages/game.html
+++ b/pages/game.html
@@ -19,13 +19,18 @@
         <h2 class="bottom-center">Player 2's Turn</h2>
         <div id="deck-p2" class="bottom-center"></div>
       </div>
-  
+      <div class="center">
+        <img src="/assets/switch.png" id="switch" >
+        <h1 id="await" style="display: none"></h1>
+
+      </div>
+      
       <div id="result" style="display: none">
         <h2>Result</h2>
         <div id="chosen-cards">
           <div id="p1-card"></div>
           <div id="p2-card"></div>
-          <h1 id="score"> </h1>
+          <h1 id="score"> </h1> 
         </div>
         <p id="outcome"></p>
       </div>
