--- a/pages/howToPlay.html
+++ b/pages/howToPlay.html
@@ -34,8 +34,8 @@
             <p>by trying to understand what set deck he got and his play style.</p>
             <br/>
 
-            <h1>The Decks</h1>
-            <img src="/assets/decks.png" height="50%" width="50%">
+            <!-- <h1>The Decks</h1>
+            <img src="/assets/decks.png" height="50%" width="50%"> -->
             <br/>
 
         </div>
