--- a/pages/game.html
+++ b/pages/game.html
@@ -7,6 +7,7 @@
       <title>Card Battle Game</title>
       <link rel="stylesheet" href="../css/style.css" />
       <link rel="stylesheet" href="../css/cardStyle.css" />
+
     </head>
   
     <body>
@@ -19,10 +20,10 @@
         <h2 class="bottom-center">Player 2's Turn</h2>
         <div id="deck-p2" class="bottom-center"></div>
       </div>
+
       <div class="center">
         <img src="/assets/switch.png" id="switch" >
         <h1 id="await" style="display: none"></h1>
-
       </div>
       
       <div id="result" style="display: none">
@@ -32,7 +33,7 @@
           <div id="p2-card"></div>
           <h1 id="score"> </h1> 
         </div>
-        <p id="outcome"></p>
+        <div id="outcome" class="outcome"></div>
       </div>
       <div id="final-result" style="display: none">
       </div>
