--- a/pages/game.html
+++ b/pages/game.html
@@ -5,6 +5,7 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Card Battle Game</title>
+      <link rel="stylesheet" href="../css/animations.css" /q>
       <link rel="stylesheet" href="../css/style.css" />
       <link rel="stylesheet" href="../css/cardStyle.css" />
 
@@ -27,14 +28,16 @@
       </div>
       
       <div id="result" style="display: none">
-        <h2>Result</h2>
         <div id="chosen-cards">
           <div id="p1-card"></div>
           <div id="p2-card"></div>
           <h1 id="score"> </h1> 
         </div>
         <div id="outcome" class="outcome"></div>
+        <br/>
+        <div id="outcome2"></div>
       </div>
+
       <div id="final-result" style="display: none">
       </div>
 
