--- a/pages/game.html
+++ b/pages/game.html
@@ -5,21 +5,24 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Card Battle Game</title>
-      <link rel="stylesheet" href="../css/animations.css" /q>
+      <link rel="stylesheet" href="../css/animations.css" />
       <link rel="stylesheet" href="../css/style.css" />
       <link rel="stylesheet" href="../css/cardStyle.css" />
-
-
     </head>
-  
+    <div id="mode" class="textRight"></div>
+    <div id="liveScore" class="textRight"></div>
+
     <body>
+      
       <div id="player-1-deck" class="container">
         <h2 class="bottom-center">Player 1's Turn</h2>
+        <h3 class="bottom-center" id="p3out"></h3>
         <div id="deck-p1" class="bottom-center"></div>
       </div>
   
       <div id="player-2-deck" class="container hidden">
         <h2 class="bottom-center">Player 2's Turn</h2>
+        <h3 class="bottom-center" id="p2out"></h3>
         <div id="deck-p2" class="bottom-center"></div>
       </div>
 
